--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -26,7 +26,7 @@
         <table>
           <tr>
             <td>
-              released
+              Released
             </td>
             <td>
               {{ episode.pubDate|date:'d-m-Y H:i' }}
@@ -34,7 +34,7 @@
           </tr>
           <tr>
             <td>
-              played
+              Played
             </td>
             <td>
               {{ episode.played_ago }}
