--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -61,7 +61,7 @@
           </td>
         </tr>
         <tr>
-          <td colspan="5" class="episode-content">
+          <td colspan="5" class="episode-content color-3-trans">
             <div class="collapse fade more-collapse" id="more-collapse{{ forloop.counter }}">
               <p>
                 {% if episode.description %}
