--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -22,7 +22,7 @@
   <!-- MAIN CONTENT -->
   <div class="container-fluid px-0">
     <!-- MULTIBAR -->
-    <nav class="navbar fixed-top color-4-trans" id="dopebar">
+    <nav class="navbar fixed-top color-1-trans" id="dopebar">
       {% include 'dopebar.min.html' %}
     </nav>
     <div class="container" id="main-wrapper">
@@ -48,7 +48,7 @@
       </div>
     </div>
     <!-- PLAYER -->
-    <div class="container-fluid fixed-bottom" id="player">
+    <div class="container-fluid fixed-bottom px-0" id="player">
       {% include 'player.min.html' %}
     </div>
     <div class="loaders d-none">
