--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -48,7 +48,7 @@
       </div>
     </div>
     <!-- PLAYER -->
-    <div class="container-fluid fixed-bottom px-0" id="player">
+    <div class="container-fluid fixed-bottom" id="player">
       {% include 'player.min.html' %}
     </div>
     <div class="loaders d-none">
