--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -34,18 +34,28 @@ dopepod
     {% endif %}
     <div class="col results-buttons">
       {% if results.view == 'grid' or results.view == 'list' %}
-        <a class="btn-dope view-button active" href="{{ results.urls.full_url }}">
-          {% if results.view == 'grid' %}
-            <i class="fas fa-th" title="Toggle View"></i>
-            <i class="fas fa-bars d-none" title="Toggle View"></i>
-          {% elif results.view == 'list' %}
-            <i class="fas fa-th d-none" title="Toggle View"></i>
-            <i class="fas fa-bars" title="Toggle View"></i>
-          {% endif %}
-        </a>
+        {% if results.view == 'grid' %}
+          <a class="btn-dope view-button active" href="{{ results.view_url }}">
+            <span>
+              <i class="fas fa-th" title="Toggle View"></i>
+            </span>
+            <span class="d-none">
+              <i class="fas fa-bars" title="Toggle View"></i>
+            </span>
+          </a>
+        {% elif results.view == 'list' %}
+          <a class="btn-dope view-button active" href="{{ results.view_url }}">
+            <span class="d-none">
+              <i class="fas fa-th" title="Toggle View"></i>
+            </span>
+            <span>
+              <i class="fas fa-bars" title="Toggle View"></i>
+            </span>
+          </a>
+        {% endif %}
       {% endif %}
       {% if results.alphabet %}
-        {% if results.selected_q|capfirst in results.alphabet %}
+        {% if results.alphabet_nix_url %}
           <a class="btn-dope active toggle" data-toggle="collapse" href="#alphabet-collapse{{ results.drop }}" aria-expanded="false" aria-controls="alphabet-collapse">
             {{ results.selected_q|capfirst }}
           </a>
@@ -100,20 +110,20 @@ dopepod
     {% if results.alphabet %}
       <div class="collapse fade options-collapse" id="alphabet-collapse{{ results.drop }}">
         <div class="options-buttons">
-          {% if results.selected_q|capfirst in results.alphabet %}
-            <a class="btn-dope options-button nix-button" href="{{ results.urls.q_url }}" id="alphabet-nix">
+          {% if results.alphabet_nix_url %}
+            <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}" id="alphabet-nix">
               <i class="fas fa-times" title="Undo Selection"></i>
             </a>
           {% endif %}
-          {% for letter in results.alphabet %}
-            {% if letter == results.selected_q|capfirst %}
-            <a class="btn-dope options-button active" href="{{ results.urls.q_url }}">
-              {{ letter }}
-            </a>
-            {% else %}
-              <a class="btn-dope options-button" href="{{ results.urls.q_url }}&q={{ letter|urlencode }}">
-                {{ letter }}
+          {% for alphabet in results.alphabet %}
+            {% if alphabet.0 %}
+              <a class="btn-dope options-button" href="{{ alphabet.1 }}">
+                {{ alphabet.0 }}
               </a>
+            {% else %}
+              <button class="btn-dope active">
+                {{ alphabet.0 }}
+              </button>
             {% endif %}
           {% endfor %}
         </div>
@@ -122,42 +132,42 @@ dopepod
     {% if results.genres %}
       <div class="collapse fade options-collapse" id="genre-collapse{{ results.drop }}">
         <div class="options-buttons">
-          {% if results.selected_genre %}
-            <a class="btn-dope options-button nix-button" href="{{ results.urls.genre_url }}">
+          {% if results.genre_nix_url %}
+            <a class="btn-dope options-button nix-button" href="{{ results.genre_nix_url }}">
               <i class="fas fa-times" title="Undo Selection"></i>
             </a>
           {% endif %}
-          {% for genre in results.genres %}
-            {% if results.selected_genre == genre %}
-            <a class="btn-dope options-button active" href="{{ results.urls.genre_url }}">
-              {{ genre }}
-            </a>
-            {% else %}
-              <a class="btn-dope options-button" href="{{ results.urls.genre_url }}&genre={{ genre.url_format }}">
-                {{ genre }}
-              </a>
-            {% endif %}
-          {% endfor %}
+            {% for genre in results.genres %}
+              {% if genre.1 %}
+                <a class="btn-dope options-button" href="{{ genre.1 }}">
+                  {{ genre.0 }}
+                </a>
+              {% else %}
+                <button class="btn-dope active">
+                  {{ genre.0 }}
+                </button>
+              {% endif %}
+            {% endfor %}
         </div>
       </div>
     {% endif %}
     {% if results.languages %}
       <div class="collapse fade options-collapse" id="language-collapse{{ results.drop }}">
         <div class="options-buttons">
-          {% if results.selected_language %}
-            <a class="btn-dope options-button nix-button" href="{{ results.urls.language_url }}">
+          {% if results.language_nix_url %}
+            <a class="btn-dope options-button nix-button" href="{{ results.language_nix_url }}">
               <i class="fas fa-times" title="Undo Selection"></i>
             </a>
           {% endif %}
           {% for language in results.languages %}
-            {% if results.selected_language == language %}
-              <a class="btn-dope options-button active" href="{{ results.urls.language_url }}">
-                {{ language }}
+            {% if language.1 %}
+              <a class="btn-dope options-button" href="{{ language.1 }}">
+                {{ language.0 }}
               </a>
             {% else %}
-              <a class="btn-dope options-button" href="{{ results.urls.language_url }}&language={{ language.url_format }}">
-                {{ language }}
-              </a>
+              <button class="btn-dope active">
+                {{ language.0 }}
+              </button>
             {% endif %}
           {% endfor %}
         </div>
