--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -1,5 +1,62 @@
 <div class="row collapse fade view-collapse {% if results.view == 'grid' %}show{% endif %}">
-  {% for podcast in results.podcasts %}
+  {% for podcast in results.podcasts1 %}
+  <div class="col-lg-2 col-md-3 col-4 result-box">
+    <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
+      <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.artworkUrl }}200x200bb.jpg'"
+        alt="{{ podcast.title }}" />
+      <h1>
+        <strong>
+          {{ podcast.title }}
+        </strong>
+      </h1>
+      <h2>
+        by
+        <strong>
+          {{ podcast.artist }}
+        </strong>
+      </h2>
+    </a>
+  </div>
+  {% endfor %}
+  {% for podcast in results.podcasts2 %}
+  <div class="col-lg-2 col-md-3 col-4 result-box">
+    <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
+      <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.artworkUrl }}200x200bb.jpg'"
+        alt="{{ podcast.title }}" />
+      <h1>
+        <strong>
+          {{ podcast.title }}
+        </strong>
+      </h1>
+      <h2>
+        by
+        <strong>
+          {{ podcast.artist }}
+        </strong>
+      </h2>
+    </a>
+  </div>
+  {% endfor %}
+  {% for podcast in results.podcasts3 %}
+  <div class="col-lg-2 col-md-3 col-4 result-box">
+    <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
+      <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.artworkUrl }}200x200bb.jpg'"
+        alt="{{ podcast.title }}" />
+      <h1>
+        <strong>
+          {{ podcast.title }}
+        </strong>
+      </h1>
+      <h2>
+        by
+        <strong>
+          {{ podcast.artist }}
+        </strong>
+      </h2>
+    </a>
+  </div>
+  {% endfor %}
+  {% for podcast in results.podcasts4 %}
   <div class="col-lg-2 col-md-3 col-4 result-box">
     <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
       <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.artworkUrl }}200x200bb.jpg'"
