--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -76,7 +76,7 @@
             {% endif %}
           </p>
           <div class="last-played-buttons">
-            <form class="playlist-form d-inline" action="{% url 'playlist' %}" method="POST" target="_blank">
+            <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
               {% csrf_token %}
               <input type="hidden" name="mode" value="play" />
               <input type="hidden" name="signature" value="{{ episode.signature }}" />
@@ -85,7 +85,7 @@
               </button>
             </form>
             {% if user.is_authenticated %}
-              <form class="playlist-form d-inline" action="{% url 'playlist' %}" method="POST">
+              <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
                 {% csrf_token %}
                 <input type="hidden" name="mode" value="add" />
                 <input type="hidden" name="signature" value="{{ episode.signature }}" />
