--- a/podcasts/templates/pagination.html
+++ b/podcasts/templates/pagination.html
@@ -1,26 +1,22 @@
 <div class="col-12 col-md-6 pages-buttons">
-  {% if results.pagination.start %}
-    <a class="btn-dope options-button" href="{{ results.urls.full_url }}">
+  {% if results.start_url %}
+    <a class="btn-dope options-button" href="{{ results.start_url }}">
       <i class="fas fa-angle-double-left" title="First Page"></i>
     </a>
   {% endif %}
-  {% for i in results.pagination.pages %}
-    {% if results.pagination.page == i %}
-      <button class="btn-dope options-button active">
-        {{ i }}
-      </button>
-    {% else %}
-      {% if i == 1 %}
-        <a class="btn-dope options-button" href="{{ results.urls.full_url }}">
-      {% else %}
-        <a class="btn-dope options-button" href="{{ results.urls.full_url }}&page={{ i }}">
-      {% endif %}
-        {{ i }}
+  {% for page in results.pages %}
+    {% if page.1 %}
+      <a class="btn-dope options-button" href="{{ page.1 }}">
+        {{ page.0 }}
       </a>
+    {% else %}
+      <button class="btn-dope options-button active">
+        {{ page.0 }}
+      </button>
     {% endif %}
   {% endfor %}
-  {% if results.pagination.end %}
-    <a class="btn-dope options-button" href="{{ results.urls.full_url }}&page={{ results.num_pages }}">
+  {% if results.end_url %}
+    <a class="btn-dope options-button" href="{{ results.end_url }}">
       <i class="fas fa-angle-double-right" title="Last Page"></i>
     </a>
   {% endif %}
