--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -13,7 +13,7 @@ dopepod
           <i class="fas fa-arrow-left" title="Back"></i>
         </button>
         <div class="extra-options">
-          <a class="btn-dope results-minimize reverse-toggle" data-toggle="collapse" href="#results-collapse{{ results.drop }}" aria-expanded="true" aria-controls="results-collapse">
+          <a class="btn-dope results-minimize reverse-toggle" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true" aria-controls="results-collapse">
             <i class="fas fa-minus" title="Minimize"></i>
           </a>
           <a class="btn-dope results-close" href="/">
@@ -28,8 +28,8 @@ dopepod
       </h1>
     </div>
   </div>
-  <div class="row collapse results-collapse fade show" id="results-collapse{{ results.drop }}">
-    {% if results.pagination %}
+  <div class="row collapse results-collapse fade show" id="results-collapse-{{ results.view }}">
+    {% if results.pages %}
       {% include 'pagination.min.html' %}
     {% endif %}
     <div class="col results-buttons">
@@ -56,44 +56,44 @@ dopepod
       {% endif %}
       {% if results.alphabet %}
         {% if results.alphabet_nix_url %}
-          <a class="btn-dope active toggle" data-toggle="collapse" href="#alphabet-collapse{{ results.drop }}" aria-expanded="false" aria-controls="alphabet-collapse">
+          <a class="btn-dope active toggle" data-toggle="collapse" href="#alphabet-collapse-{{ results.view }}" aria-expanded="false" aria-controls="alphabet-collapse">
             {{ results.selected_q|capfirst }}
           </a>
         {% else %}
-          <a class="btn-dope toggle" data-toggle="collapse" href="#alphabet-collapse{{ results.drop }}" aria-expanded="false" aria-controls="alphabet-collapse">
+          <a class="btn-dope toggle" data-toggle="collapse" href="#alphabet-collapse-{{ results.view }}" aria-expanded="false" aria-controls="alphabet-collapse">
             A-Z
           </a>
         {% endif %}
       {% endif %}
       {% if results.genres %}
         {% if results.selected_genre %}
-          <a class="btn-dope active toggle" data-toggle="collapse" href="#genre-collapse{{ results.drop }}" aria-expanded="false" aria-controls="genre-collapse">
+          <a class="btn-dope active toggle" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false" aria-controls="genre-collapse">
             {{ results.selected_genre }}
           </a>
         {% else %}
-          <a class="btn-dope toggle" data-toggle="collapse" href="#genre-collapse{{ results.drop }}" aria-expanded="false" aria-controls="genre-collapse">
+          <a class="btn-dope toggle" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false" aria-controls="genre-collapse">
             All Genres
           </a>
         {% endif %}
       {% endif %}
       {% if results.languages %}
         {% if results.selected_language %}
-          <a class="btn-dope active toggle" data-toggle="collapse" href="#language-collapse{{ results.drop }}" aria-expanded="false" aria-controls="language-collapse">
+          <a class="btn-dope active toggle" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false" aria-controls="language-collapse">
             {{ results.selected_language }}
           </a>
         {% else %}
-          <a class="btn-dope toggle" data-toggle="collapse" href="#language-collapse{{ results.drop }}" aria-expanded="false" aria-controls="language-collapse">
+          <a class="btn-dope toggle" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false" aria-controls="language-collapse">
             All Languages
           </a>
         {% endif %}
       {% endif %}
       {% if results.selected_provider == 'dopepod' %}
-        <a class="btn-dope options-button active provider-button" href="{{ results.urls.provider_url }}&provider=itunes">
+        <a class="btn-dope options-button active provider-button" href="{{ results.provider_url }}">
           <span>On dopepod</span>
           <span class="d-none">On itunes</span>
         </a>
       {% elif results.selected_provider == 'itunes' %}
-        <a class="btn-dope options-button active provider-button" href="{{ results.urls.provider_url }}&provider=dopepod">
+        <a class="btn-dope options-button active provider-button" href="{{ results.provider_url }}">
           <span class="d-none">On dopepod</span>
           <span>On itunes</span>
         </a>
@@ -108,7 +108,7 @@ dopepod
       {% endif %}
     </div>
     {% if results.alphabet %}
-      <div class="collapse fade options-collapse" id="alphabet-collapse{{ results.drop }}">
+      <div class="collapse fade options-collapse" id="alphabet-collapse-{{ results.view }}">
         <div class="options-buttons">
           {% if results.alphabet_nix_url %}
             <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}" id="alphabet-nix">
@@ -116,7 +116,7 @@ dopepod
             </a>
           {% endif %}
           {% for alphabet in results.alphabet %}
-            {% if alphabet.0 %}
+            {% if alphabet.1 %}
               <a class="btn-dope options-button" href="{{ alphabet.1 }}">
                 {{ alphabet.0 }}
               </a>
@@ -130,29 +130,29 @@ dopepod
       </div>
     {% endif %}
     {% if results.genres %}
-      <div class="collapse fade options-collapse" id="genre-collapse{{ results.drop }}">
+      <div class="collapse fade options-collapse" id="genre-collapse-{{ results.view }}">
         <div class="options-buttons">
           {% if results.genre_nix_url %}
             <a class="btn-dope options-button nix-button" href="{{ results.genre_nix_url }}">
               <i class="fas fa-times" title="Undo Selection"></i>
             </a>
           {% endif %}
-            {% for genre in results.genres %}
-              {% if genre.1 %}
-                <a class="btn-dope options-button" href="{{ genre.1 }}">
-                  {{ genre.0 }}
-                </a>
-              {% else %}
-                <button class="btn-dope active">
-                  {{ genre.0 }}
-                </button>
-              {% endif %}
-            {% endfor %}
+          {% for genre in results.genres %}
+            {% if genre.1 %}
+              <a class="btn-dope options-button" href="{{ genre.1 }}">
+                {{ genre.0 }}
+              </a>
+            {% else %}
+              <button class="btn-dope active">
+                {{ genre.0 }}
+              </button>
+            {% endif %}
+          {% endfor %}
         </div>
       </div>
     {% endif %}
     {% if results.languages %}
-      <div class="collapse fade options-collapse" id="language-collapse{{ results.drop }}">
+      <div class="collapse fade options-collapse" id="language-collapse-{{ results.view }}">
         <div class="options-buttons">
           {% if results.language_nix_url %}
             <a class="btn-dope options-button nix-button" href="{{ results.language_nix_url }}">
@@ -189,7 +189,8 @@ dopepod
         {% endif %}
       </div>
     {% endif %}
-    {% if results.pagination %}
+
+    {% if results.pages %}
       {% include 'pagination.min.html' %}
     {% endif %}
   </div>
