search ordering fix

--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -174,7 +174,7 @@ dopepod
       </div>
     {% endif %}
 
-    {% if results.podcasts or results.episodes %}
+    {% if results.podcasts or results.podcasts1 or results.episodes %}
       <div class="col-12 results-content">
         {% if results.view == 'grid' or results.view == 'list' %}
           {% include 'search.min.html' %}
