--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -42,7 +42,7 @@
         <div class="col-12 order-2 col-md-6 order-md-3" id="right">
           <!-- LAST PLAYED -->
           <div class="row" id="last-played">
-            {% with last_played as results %} {% if last_played %} {% include 'results_base.min.html' %} {% endif %} {% endwith %}
+            {% if last_played %} {% with last_played as results %} {% include 'results_base.min.html' %} {% endwith %} {% endif %}
           </div>
         </div>
       </div>
