--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -27,6 +27,9 @@
     </nav>
     <div class="container" id="main-wrapper">
       <div class="row">
+        <button class="last-played-toggle d-none" id="scroll-up">
+          <i class="fas fa-angle-down" title="Expand"></i>
+        </button>
         <div class="col-12 order-3 col-md-6 order-md-2" id="left">
           <!-- CHARTS -->
           <div class="row" id="charts">
