--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -6,25 +6,19 @@ settings
 
 {% block center-stage %}
 <div class="col-12 results color-2-trans settings">
-  <div class="row">
-    <div class="col-12 col-md-6">
-      <form class="settings-form" action="{% url 'settings' %}" method="POST">
+  <form class="settings-form" action="{% url 'settings' %}" method="POST">
+    <div class="form-row">
+      <div class="col-12 col-md-6">
         <button type="submit" class="btn-dope active settings-save">Save</button>
         <h1>
           Settings
         </h1>
         <div class="settings-errors">
-          {% if errors %}
-            {% for k, v in errors.items %}
-              <div class="error-message">
-                {% if k %}
-                  {{ k|capfirst }}: {{ v }}
-                {% else %}
-                  {{ v }}
-                {% endif %}
-              </div>
-            {% endfor %}
-          {% endif %}
+          {% if errors %} {% for k, v in errors.items %}
+          <div class="error-message">
+            {% if k %} {{ k|capfirst }}: {{ v }} {% else %} {{ v }} {% endif %}
+          </div>
+          {% endfor %} {% endif %}
         </div>
         <div class="login-form-group">
           <label for="email">Email</label>
@@ -42,29 +36,24 @@ settings
           <div class="form-check form-check-inline">
             <label class="form-check-label" for="show_explicit">
               {% if profile_form.show_explicit.value %}
-                <input class="form-check-input" type="checkbox" name="show_explicit" id="show_explicit" checked />
-              {% else %}
-                <input class="form-check-input" type="checkbox" name="show_explicit" id="show_explicit" />
-              {% endif %}
-              Show explicit content
+              <input class="form-check-input" type="checkbox" name="show_explicit" id="show_explicit" checked /> {% else %}
+              <input class="form-check-input" type="checkbox" name="show_explicit" id="show_explicit" /> {% endif %} Show explicit content
             </label>
           </div>
           <div class="form-check form-check-inline">
             <label class="form-check-label" for="dark_theme">
               {% if profile_form.dark_theme.value %}
-                <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" checked />
-              {% else %}
-                <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" />
-              {% endif %}
-              Use dark theme
+              <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" checked /> {% else %}
+              <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" /> {% endif %} Use dark theme
             </label>
           </div>
         </div>
-      </form>
+
+      </div>
+      <div class="col-12 col-md-6">
+
+      </div>
     </div>
-    <div class="col-12 col-md-6">
-    
-    </div>
-  </div>
+  </form>
 </div>
 {% endblock %}
