--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -58,7 +58,7 @@ dopepod
             </div>
           </form>
         </div>
-        <div class="collapse fade login-collapse show active" id="signup-collapse">
+        <div class="collapse fade login-collapse show" id="signup-collapse">
           <form class="signup-form" method="POST" action="{% url 'signup' %}">
             {% csrf_token %}
             <div class="login-form-group">
@@ -109,7 +109,7 @@ dopepod
             Sign up now to subscribe to all your favorite podcasts.
           </p>
         </div>
-        <div class="collapse fade login-collapse show active" id="login-collapse">
+        <div class="collapse fade login-collapse show" id="login-collapse">
           <form class="login-form" method="POST" action="{% url 'login' %}">
             {% csrf_token %}
             <div class="login-form-group">
@@ -244,7 +244,7 @@ dopepod
             </div>
           </form>
         </div>
-        <div class="collapse fade login-collapse show active" id="password-collapse">
+        <div class="collapse fade login-collapse show" id="password-collapse">
           <p>
             Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
           </p>
@@ -264,7 +264,7 @@ dopepod
           </form>
         </div>
       {% else %}
-        <div class="collapse fade login-collapse show active" id="splash-collapse">
+        <div class="collapse fade login-collapse show" id="splash-collapse">
           <p>
             is a free, mobile-friendly podcast web app that
             scours the internet for fresh podcasts so you don't have to.
@@ -349,24 +349,24 @@ dopepod
     </div>
     <div class="login-buttons">
       {% if view == 'signup' %}
-        <button class="btn-dope toggle" href="#login-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="login-collapse">
+        <button class="btn-dope toggle login-link collapsed" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="login-collapse">
           Login
         </button>
-        <button class="btn-dope active toggle" href="#signup-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="signup-collapse">
+        <button class="btn-dope active toggle signup-link" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="signup-collapse">
           Signup
         </button>
       {% elif view == 'login' %}
-        <button class="btn-dope toggle" href="#login-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="login-collapse">
+        <button class="btn-dope toggle login-link" data-target="#login-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="login-collapse">
           Login
         </button>
-        <button class="btn-dope toggle" href="#signup-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="signup-collapse">
+        <button class="btn-dope toggle signup-link collapsed" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="signup-collapse">
           Signup
         </button>
       {% else %}
-        <button class="btn-dope toggle" href="#login-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="login-collapse">
+        <button class="btn-dope toggle login-link collapsed" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="login-collapse">
           Login
         </button>
-        <button class="btn-dope toggle" href="#signup-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="signup-collapse">
+        <button class="btn-dope toggle signup-link collapsed" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="signup-collapse">
           Signup
         </button>
       {% endif %}
