--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -11,6 +11,7 @@
   <title>
     {% block title %} {% endblock %}
   </title>
+<link rel="shortcut icon" href="{% static 'favicon.ico' %}" />
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Orbitron" />
   <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
